src/objects/trainmanagement__c.object
<CustomObject>
    <fields>
        <fullName>APPLICANT__c</fullName>
        <formula>CreatedBy.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>申请人</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationNo__c</fullName>
        <displayFormat>PX-{yyyy}{000}</displayFormat>
        <label>申请编号</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>AssessmentTest__c</fullName>
        <label>考核试卷</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>有</fullName>
                </value>
                <value>
                    <fullName>无</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CheckResults__c</fullName>
        <label>考核结果</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>不合格</fullName>
                </value>
                <value>
                    <fullName>合格</fullName>
                </value>
                <value>
                    <fullName>优良</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateApplication__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>申请日期</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>预算部门</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>技术部</fullName>
                </value>
                <value>
                    <fullName>技术二部</fullName>
                </value>
                <value>
                    <fullName>技术二部本部</fullName>
                </value>
                <value>
                    <fullName>北京技术中心</fullName>
                </value>
                <value>
                    <fullName>济南技术中心</fullName>
                </value>
                <value>
                    <fullName>上海技术中心</fullName>
                </value>
                <value>
                    <fullName>沈阳技术中心</fullName>
                </value>
                <value>
                    <fullName>技术三部</fullName>
                </value>
                <value>
                    <fullName>广州技术中心</fullName>
                </value>
                <value>
                    <fullName>技术三部本部</fullName>
                </value>
                <value>
                    <fullName>西安技术中心</fullName>
                </value>
                <value>
                    <fullName>重庆技术中心</fullName>
                </value>
                <value>
                    <fullName>技术一部</fullName>
                </value>
                <value>
                    <fullName>北区</fullName>
                </value>
                <value>
                    <fullName>东区</fullName>
                </value>
                <value>
                    <fullName>飞白技术</fullName>
                </value>
                <value>
                    <fullName>技术一部本部</fullName>
                </value>
                <value>
                    <fullName>南区</fullName>
                </value>
                <value>
                    <fullName>维修销售中心</fullName>
                </value>
                <value>
                    <fullName>西区</fullName>
                </value>
                <value>
                    <fullName>技术总部</fullName>
                </value>
                <value>
                    <fullName>技术总部本部</fullName>
                </value>
                <value>
                    <fullName>培训支持中心</fullName>
                </value>
                <value>
                    <fullName>售后运营中心</fullName>
                </value>
                <value>
                    <fullName>香港公司</fullName>
                </value>
                <value>
                    <fullName>香港技术</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>培训讲师（厂家）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>培训课时（小时）</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JSapartment__c</fullName>
        <label>结算部门</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>技术部</fullName>
                </value>
                <value>
                    <fullName>技术二部</fullName>
                </value>
                <value>
                    <fullName>技术二部本部</fullName>
                </value>
                <value>
                    <fullName>北京技术中心</fullName>
                </value>
                <value>
                    <fullName>济南技术中心</fullName>
                </value>
                <value>
                    <fullName>上海技术中心</fullName>
                </value>
                <value>
                    <fullName>沈阳技术中心</fullName>
                </value>
                <value>
                    <fullName>技术三部</fullName>
                </value>
                <value>
                    <fullName>广州技术中心</fullName>
                </value>
                <value>
                    <fullName>技术三部本部</fullName>
                </value>
                <value>
                    <fullName>西安技术中心</fullName>
                </value>
                <value>
                    <fullName>重庆技术中心</fullName>
                </value>
                <value>
                    <fullName>技术一部</fullName>
                </value>
                <value>
                    <fullName>北区</fullName>
                </value>
                <value>
                    <fullName>东区</fullName>
                </value>
                <value>
                    <fullName>飞白技术</fullName>
                </value>
                <value>
                    <fullName>技术一部本部</fullName>
                </value>
                <value>
                    <fullName>南区</fullName>
                </value>
                <value>
                    <fullName>维修销售中心</fullName>
                </value>
                <value>
                    <fullName>西区</fullName>
                </value>
                <value>
                    <fullName>技术总部</fullName>
                </value>
                <value>
                    <fullName>技术总部本部</fullName>
                </value>
                <value>
                    <fullName>培训支持中心</fullName>
                </value>
                <value>
                    <fullName>售后运营中心</fullName>
                </value>
                <value>
                    <fullName>香港公司</fullName>
                </value>
                <value>
                    <fullName>香港技术</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JSbeizhu__c</fullName>
        <label>结算明细备注</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>JSmx__c</fullName>
        <label>结算明细备注</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LevelFourDepartment__c</fullName>
        <formula>CreatedBy.LfourDepartment__c</formula>
        <label>四级部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PXPerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>培训负责人</label>
        <referenceTo>User</referenceTo>
        <relationshipName>pxMAtM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PXyangji__c</fullName>
        <label>培训样机</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLineLevel__c</fullName>
        <label>产品线级别</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LEVEL1</fullName>
                </value>
                <value>
                    <fullName>LEVEL2</fullName>
                </value>
                <value>
                    <fullName>LEVEL3</fullName>
                </value>
                <value>
                    <fullName>LEVEL4</fullName>
                </value>
                <value>
                    <fullName>LEVEL5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>培训讲师</label>
        <referenceTo>User</referenceTo>
        <relationshipName>pxMAtl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TrainingBudget__c</fullName>
        <label>培训预算</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TrainingLevel__c</fullName>
        <label>培训级别</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>原厂级</fullName>
                </value>
                <value>
                    <fullName>公司级</fullName>
                </value>
                <value>
                    <fullName>大区级</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TrainingRecord__c</fullName>
        <label>培训记录</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>培训交流表</fullName>
                </value>
                <value>
                    <fullName>培训考核表</fullName>
                </value>
                <value>
                    <fullName>培训反馈表</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TrainingSettlement__c</fullName>
        <label>培训结算</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YSMX__c</fullName>
        <label>预算明细备注</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>YsBeiZhu__c</fullName>
        <label>预算明细备注</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bound__c</fullName>
        <label>秘密及限制范围</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>机密</fullName>
                </value>
                <value>
                    <fullName>限于公司内部交流学习</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>end_date__c</fullName>
        <description>用于记录培训结束的时间</description>
        <label>培训结束时间</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idea__c</fullName>
        <label>建议意见</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>remark__c</fullName>
        <label>备注</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>spzt__c</fullName>
        <label>审批状态</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>草稿</fullName>
                    <default>true</default>
                    <label>草稿</label>
                </value>
                <value>
                    <fullName>待审批</fullName>
                </value>
                <value>
                    <fullName>已审批</fullName>
                </value>
                <value>
                    <fullName>已拒绝</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>teacher3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>培训老师（助教）</label>
        <referenceTo>User</referenceTo>
        <relationshipName>xfrA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>teacher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>培训老师（主教）</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ECFu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>trainingcontent__c</fullName>
        <label>培训内容</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>trainingmethod__c</fullName>
        <label>培训方式</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PPT</fullName>
                </value>
                <value>
                    <fullName>PPT+manual+实操</fullName>
                </value>
                <value>
                    <fullName>PPT+实操</fullName>
                </value>
                <value>
                    <fullName>PPT+manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>trainingplace__c</fullName>
        <label>培训地点</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trainingtime__c</fullName>
        <label>培训开始时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>培训类型</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>技术培训</fullName>
                </value>
                <value>
                    <fullName>技术交流</fullName>
                </value>
                <value>
                    <fullName>临床培训</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
                <value>
                    <fullName>原厂培训</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zzzs__c</fullName>
        <label>培训资质</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>新人培训</fullName>
                </value>
                <value>
                    <fullName>初级培训（level1）</fullName>
                </value>
                <value>
                    <fullName>中级培训（Level2）</fullName>
                </value>
                <value>
                    <fullName>高级培训（level3）</fullName>
                </value>
                <value>
                    <fullName>专项培训</fullName>
                </value>
                <value>
                    <fullName>原厂培训</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>培训管理</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>trainingtime__c</columns>
        <columns>end_date__c</columns>
        <columns>Field2__c</columns>
        <columns>teacher__c</columns>
        <columns>teacher3__c</columns>
        <columns>type__c</columns>
        <columns>zzzs__c</columns>
        <columns>trainingcontent__c</columns>
        <columns>trainingmethod__c</columns>
        <columns>trainingplace__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <listViews>
        <fullName>ClinicTrain</fullName>
        <columns>NAME</columns>
        <columns>remark__c</columns>
        <columns>idea__c</columns>
        <columns>bound__c</columns>
        <columns>trainingplace__c</columns>
        <columns>trainingmethod__c</columns>
        <columns>teacher__c</columns>
        <columns>type__c</columns>
        <columns>trainingcontent__c</columns>
        <columns>trainingtime__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>type__c</field>
            <operation>equals</operation>
            <value>临床培训</value>
        </filters>
        <label>临床培训</label>
    </listViews>
    <listViews>
        <fullName>OtherTrain</fullName>
        <columns>NAME</columns>
        <columns>remark__c</columns>
        <columns>idea__c</columns>
        <columns>bound__c</columns>
        <columns>trainingplace__c</columns>
        <columns>trainingmethod__c</columns>
        <columns>teacher__c</columns>
        <columns>type__c</columns>
        <columns>trainingcontent__c</columns>
        <columns>trainingtime__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>type__c</field>
            <operation>equals</operation>
            <value>其他</value>
        </filters>
        <label>其他培训</label>
    </listViews>
    <listViews>
        <fullName>TechniqueCommunicate</fullName>
        <columns>NAME</columns>
        <columns>remark__c</columns>
        <columns>idea__c</columns>
        <columns>bound__c</columns>
        <columns>trainingplace__c</columns>
        <columns>trainingmethod__c</columns>
        <columns>teacher__c</columns>
        <columns>type__c</columns>
        <columns>trainingcontent__c</columns>
        <columns>trainingtime__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>type__c</field>
            <operation>equals</operation>
            <value>技术交流</value>
        </filters>
        <label>技术交流</label>
    </listViews>
    <listViews>
        <fullName>TechniqueTrain</fullName>
        <columns>NAME</columns>
        <columns>remark__c</columns>
        <columns>idea__c</columns>
        <columns>bound__c</columns>
        <columns>trainingplace__c</columns>
        <columns>trainingmethod__c</columns>
        <columns>teacher__c</columns>
        <columns>type__c</columns>
        <columns>trainingcontent__c</columns>
        <columns>trainingtime__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>type__c</field>
            <operation>equals</operation>
            <value>技术培训</value>
        </filters>
        <label>技术培训</label>
    </listViews>
    <nameField>
        <label>培训名称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>培训管理</pluralLabel>
    <recordTypes>
        <fullName>RecordTypeCG</fullName>
        <active>true</active>
        <label>常规培训管理</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordTypeDX</fullName>
        <active>true</active>
        <label>大型培训管理</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>peixun</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(teacher__c)    &amp;&amp;  ISBLANK(Field1__c)  &amp;&amp;  ISBLANK(Trainer__c)</errorConditionFormula>
        <errorMessage>培训讲师与原厂培训讲师必须填一个</errorMessage>
    </validationRules>
</CustomObject>